--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-plugin-transform-runtime": "^6.7.5",
     "body-parser": "^1.18.3",
-    "escope": "^3.6.0",
+    "escope": "^3.6.0"
   }
 }
